--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,6 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+        maven-version: '3.9.9'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
